redo animation to prevent layout overflowings + speed it up

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -61,7 +61,6 @@
 
 .react-datepicker__months-list-container {
   display: none;
-  width: 100%;
 
   &--prev {
     order: 0;
